<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
    	android:key="category_bln" 
    	android:title="@string/bln_category_title" >

        <CheckBoxPreference android:key="bln_enable_preference"
            android:title="@string/bln_enable_title"
            android:summary="@string/bln_enable_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="bln_timeout_preference"
            android:title="@string/bln_timeout_title"
            android:entries="@array/bln_timeout_entries"
            android:entryValues="@array/bln_timeout_values"
            android:defaultValue="120" />

    </PreferenceCategory>
        
    <PreferenceCategory 
    	android:key="category_touch_blink" 
    	android:title="@string/touch_blink_timing_title" 
    	android:id="@+id/touch_blink_fragment">

        <ListPreference
            android:key="touch_blink_off"
            android:title="@string/touch_blink_off_title"
            android:entries="@array/touch_blink_off_entries"
            android:entryValues="@array/touch_blink_off_values"
            android:defaultValue="7000" />
    
        <ListPreference
            android:key="touch_blink_on"
            android:title="@string/touch_blink_on_title"
            android:entries="@array/touch_blink_on_entries"
            android:entryValues="@array/touch_blink_on_values"
            android:defaultValue="40" />

    </PreferenceCategory>

</PreferenceScreen>
