<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dip">

        <TextView android:id="@+id/audio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_hpvol_gain_title"
                android:paddingTop="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/audio_hpvol_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/audio_hpvol_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/audio_text"
                android:paddingTop="2dip"
                android:paddingBottom="20dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/audio_hpvol_seekbar" >

            <Button
                android:id="@+id/btnAudioHpvolDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_default" />

            <CheckBox
                android:id="@+id/cbAudioHpvolBoot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_hpvol_restoreonboot"
                android:checked="true" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
